--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <header>
+      <div class="head">
+        <h1>Dr. Norman Borlaug</h1>
+        <p>The man who saved a billion lives</p>
+      </div>
 
-    <p>Hello World, We are software developers in microverse</p>
+    </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
@@ -23,7 +28,6 @@
     - The freeCodeCamp Team
 
     -->
-    <p>Hello World</p>
     <script  src="js/index.js"></script>
   </body>
 </html>
