--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1>Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
       </div>
+      <div>
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman">
+        <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
+      </div>
 
     </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
