--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
         <li><b>2009</b> - dies at the age of 95.</li>
       </ul>
 
-      <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+     <div class="quote-p">
+      <p class="head1">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
       <p>-- Indian Prime Minister Manmohan Singh</p>
+     </div>
+
       <h3>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a></h3>
     </section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
